@@ -37,14 +37,20 @@ Glee.sendTweet = function(){
 			var shortenedURL = json[0].results[location.href].shortUrl;
 			var encodedURL = encodeURIComponent(shortenedURL);
 			//redirect to twitter homepage
-			location.href = "http://twitter.com/?status="+document.title+" "+encodedURL;
+			if(document.title.length <= 90)
+			    location.href = "http://twitter.com/?status="+document.title+" "+encodedURL;
+			else
+			    location.href = "http://twitter.com/?status="+encodedURL;
 		});
 	}
 	else
 	{
 		//redirect to twitter without shortening the URL
 		var encodedURL = encodeURIComponent(location.href);
-		location.href =  "http://twitter.com/?status="+document.title+" "+encodedURL;
+		if(document.title.length <= 90)
+		    location.href = "http://twitter.com/?status="+document.title+" "+encodedURL;
+		else
+		    location.href = "http://twitter.com/?status="+encodedURL;
 	}
 }
 
@@ -75,10 +81,7 @@ Glee.inspectPage = function(){
 Glee.inspectElement = function(el,level){
 	var elId = el.attr("id");
 	var elClass = el.attr("class");
-	// if(elId.length != 0)
-	// {
-	// 	return "#"+elId;
-	// }
+
 	if(elClass.length != 0)
 	{
 		elClass = jQuery.trim(elClass.replace("GleeHL",""));
@@ -176,7 +179,7 @@ Glee.sharePage = function(){
 /* read: Make the current page readable using Readability */
 Glee.makeReadable = function(){
 	//code from the Readability bookmarklet (http://lab.arc90.com/experiments/readability/)
-	location.href = "javascript:(function(){readStyle='style-newspaper';readSize='size-large';readMargin='margin-wide';_readability_script=document.createElement('SCRIPT');_readability_script.type='text/javascript';_readability_script.src='http://lab.arc90.com/experiments/readability/js/readability.js?x='+(Math.random());document.getElementsByTagName('head')[0].appendChild(_readability_script);_readability_css=document.createElement('LINK');_readability_css.rel='stylesheet';_readability_css.href='http://lab.arc90.com/experiments/readability/css/readability.css';_readability_css.type='text/css';_readability_css.media='screen';document.getElementsByTagName('head')[0].appendChild(_readability_css);_readability_print_css=document.createElement('LINK');_readability_print_css.rel='stylesheet';_readability_print_css.href='http://lab.arc90.com/experiments/readability/css/readability-print.css';_readability_print_css.media='print';_readability_print_css.type='text/css';document.getElementsByTagName('head')[0].appendChild(_readability_print_css);})();";
+	location.href = "javascript:(function(){readStyle='style-athelas';readSize='size-medium';readMargin='margin-medium';_readability_script=document.createElement('SCRIPT');_readability_script.type='text/javascript';_readability_script.src='http://lab.arc90.com/experiments/readability/js/readability.js?x='+(Math.random());document.getElementsByTagName('head')[0].appendChild(_readability_script);_readability_css=document.createElement('LINK');_readability_css.rel='stylesheet';_readability_css.href='http://lab.arc90.com/experiments/readability/css/readability.css';_readability_css.type='text/css';_readability_css.media='all';document.getElementsByTagName('head')[0].appendChild(_readability_css);_readability_print_css=document.createElement('LINK');_readability_print_css.rel='stylesheet';_readability_print_css.href='http://lab.arc90.com/experiments/readability/css/readability-print.css';_readability_print_css.media='print';_readability_print_css.type='text/css';document.getElementsByTagName('head')[0].appendChild(_readability_print_css);})();";
 }
 
 /* shorten: Shortens the URL using bit.ly and displays it in gleeBox */
